Skin fixes: - Use specificity to set display icon size to 75px - Apply top margin for small player separately to keep display icon centered - Increase control bar height so bottom of control bar buttons don’t get cut off

--- a/test/manual/css-skins/css/jw-skin-v1.css
+++ b/test/manual/css-skins/css/jw-skin-v1.css
@@ -18,7 +18,7 @@
 	background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(0,0,0,0.29) 100%) !important;
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#4a000000',GradientType=0 ) !important;
 	line-height: 1.5em;
-	height: 1.5em;
+	height: 1.8em;
 	}
 	
 .jwplayer.jw-skin-lt-player-skin .jw-slider-horizontal .jw-slider-container,
@@ -49,14 +49,21 @@
 	top: -3px;
 	box-shadow: 0 0 2px rgba(0, 0, 0, 0.25); 
 	}	
-.jwplayer.jw-skin-lt-player-skin .jw-display-icon-container{
-	width: 75px !important;
-	margin-top: -38px;
+.jwplayer.jw-skin-lt-player-skin{
+	.jw-display-icon-container{
+		margin-top: 12px;
+	}
+	&.jw-flag-small-player {
+		.jw-display-icon-container{
+		    margin-top: 22px;
+		}
+	}
 }
-.jwplayer.jw-skin-lt-player-skin .jw-icon-display{
-	width: 75px !important;
+.jwplayer.jw-skin-lt-player-skin .jw-icon.jw-icon-display{
+	width: 75px;
 	height: 75px;
 	border-radius: 75px;
+	line-height: 75px;
 	background-color: rgba(74, 73, 74, 0.5);
 	border: 4px solid #fff;
 	}	
